--- a/jiaoben1683/index0.html
+++ b/jiaoben1683/index0.html
@@ -66,7 +66,7 @@
 
 						<!-- Sub title -->
 						<p>项目组长:王友</p>
-						<p>项目组员:李涛 周源 迟至 徐晓伟</p>
+						<p>项目组员:李涛 周源 迟志 徐晓伟</p>
 
 						<!-- Button -->
 						<p class="btn-app-store">
