--- a/jiaoben1683/index.html
+++ b/jiaoben1683/index.html
@@ -455,14 +455,14 @@
 						$(".info3").text("3.订单支付功能用到了阿里的支付宝支付");
 					} else if(left == "-3000px") {
 
-						$(".biaoti").text("登录和注册 ");
+						$(".biaoti").text("加入购物车以及物流 ");
 						$(".wrd1").text("作者 : 王友");
-						$(".wrd2").text("主要完成登录注册的一些功能");
-						$(".wrd3").text("登录验证");
-						$(".wrd4").text("注册验证");
-						$(".info1").text("1.应用了ajax实现从数据库验证用户是否存在密码是否正确，如若输入错误则会提醒");
-						$(".info2").text("2.手机注册应用了正则表达式，如若不是1358开头的都会提示输入有误，如若输入正确格式的号码，则会通过ajax从数据库查询号码是否注册过，如若注册过则会提醒用户");
-						$(".info3").text("3.应用ajax实现前端输入传输到后台与后台生成的验证码进行比较，不区分大小写，如输入错误则会提醒，刷新验证码");
+						$(".wrd2").text("主要负责项目的任务分配");
+						$(".wrd3").text("将商品加入购物车");
+						$(".wrd4").text("物流信息");
+						$(".info1").text("1.商品搜索,根据条件将查出来的商品排序,分页,可以加入购物车");
+						$(".info2").text("2.物流管理系统发货功能,能够查看到商品的物流信息");
+						$(".info3").text("3.使用HttpClient库实现不同项目间的http请求");
 
 					}else if(left == "-1200px") {
 
@@ -518,14 +518,14 @@
 
 					}  else if(left == "-600px") {
 
-						$(".biaoti").text("登录和注册 ");
+						$(".biaoti").text("加入购物车以及物流 ");
 						$(".wrd1").text("作者 : 王友");
-						$(".wrd2").text("主要完成登录注册的一些功能");
-						$(".wrd3").text("登录验证");
-						$(".wrd4").text("注册验证");
-						$(".info1").text("1.应用了ajax实现从数据库验证用户是否存在密码是否正确，如若输入错误则会提醒");
-						$(".info2").text("2.手机注册应用了正则表达式，如若不是1358开头的都会提示输入有误，如若输入正确格式的号码，则会通过ajax从数据库查询号码是否注册过，如若注册过则会提醒用户");
-						$(".info3").text("3.应用ajax实现前端输入传输到后台与后台生成的验证码进行比较，不区分大小写，如输入错误则会提醒，刷新验证码");
+						$(".wrd2").text("主要负责项目的任务分配");
+						$(".wrd3").text("将商品加入购物车");
+						$(".wrd4").text("物流信息");
+						$(".info1").text("1.商品搜索,根据条件将查出来的商品排序,分页,可以加入购物车");
+						$(".info2").text("2.物流管理系统发货功能,能够查看到商品的物流信息");
+						$(".info3").text("3.使用HttpClient库实现不同项目间的http请求");
 
 					}else if(left == "-2400px") {
 
